--- a/src/index.css
+++ b/src/index.css
@@ -1416,3 +1416,18 @@ tfoot th:first-child {
   color: var(--muted-color);
   border: 1px solid var(--muted-color);
 }
+
+.exportPDF{
+  position: relative;
+  z-index: 1;
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  background-color: var(--white-color);
+  border-radius: 4px;
+  border: 1px solid var(--primary-color);
+  color: var(--primary-color);
+  margin-top: 24px;
+  margin-left: 5px;
+  padding: 6px;
+}
